--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^12.0.0",
     "@react-native-community/masked-view": "0.1.10",
     "expo": "~40.0.0",
     "expo-app-loading": "^1.0.1",
@@ -23,6 +24,7 @@
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4",
     "react-navigation-drawer": "^2.7.0",
+    "react-navigation-header-buttons": "^7.0.0",
     "react-navigation-stack": "^2.10.4",
     "react-navigation-tabs": "^2.11.0"
   },
